--- a/gRPC'Server/appsettings.json
+++ b/gRPC'Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-MP8HC3EV;Initial Catalog=Logistic_GUI;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Enter your connection string here"
   },
   "Logging": {
     "LogLevel": {
